mdapipkg/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Product_Has_Extended_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Has Extended Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Purchase_Date__c</fullName>
        <label>Product Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Total_Warranty_Days__c</fullName>
        <label>Product Total Warranty Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validate_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark as true if a warranty check should be performed on this case upon creation or update.</description>
        <label>Validate Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Summary__c</fullName>
        <label>Warranty Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>